--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,10 @@
-index.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Flock</title>
+    <script type="text/javascript" src="app.js"></script>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
+</html>
