--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>Flock</title>
-    <script type="text/javascript" src="app.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
+  <!--   // <script type="text/javascript" src="app.js"></script> -->
+    <script src="../client/config/foursquareAPIKey.js"></script>
+    <script src="../client/lib/foursquareAPI.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+   <!--  <div id="app"></div> -->
   </body>
 </html>
