Modify API keys files

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Flock</title>
     <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script src="../client/config/foursquareAPIKey.js"></script>
+    <script src="../client/config/APIKeys.js"></script>
     <script src="../client/lib/foursquareAPI.js"></script>
   </head>
   <body>
