--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>Flock</title>
+    <link rel="stylesheet" type="text/css" href="lib/semantic/dist/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+
     <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/semantic/dist/semantic.min.js"></script>
     <script src="../client/config/APIKeys.js"></script>
     <script src="../client/lib/foursquareAPI.js"></script>
   </head>
